# canary

./: .dockerignore  .env.example  .gitignore  Dockerfile  SDK_PLAN.md  docker-compose.yml
backend/: .yarnrc.yml  CLAUDE_AI_INTEGRATION_PLAN.md  Cargo.toml  README.md  SUI_SDK_LIB_PLAN.md  docker-entrypoint.sh  move-book-md.txt  move-decompile-refactor-prompt-en.md  move-decompiler  package.json  sui-doc-mdx.txt
backend/src/: canary.rs  client.rs  error.rs  index.ts  keystore.rs  lib.rs  main.rs  transaction.rs
backend/src/client/: README.md  canary-client.ts  example.ts  index.ts  sui-client-factory.ts
backend/src/key/: IMPLEMENTATION.md  README.md  bech32-parser.ts  example.ts  index.ts  key-manager.ts
backend/src/queries/: README.md  canary-queries.ts  example.ts  index.ts  member-queries.ts
backend/src/transactions/: README.md  example.ts  index.ts  member-registry.ts  pkg-storage.ts  transaction-builder.ts
backend/src/types/: contract-types.ts  index.ts
backend/src/utils/: CLAUDE_AI_README.md  WALRUS_README.md  blob.ts  claude-ai-example.ts  claude-ai.ts  constants.ts  helpers.ts  index.ts  mvr.ts  walrus-example.ts  walrus.ts
move/: Move.toml
move/sources/: canary.move  member_registry.move  pkg_storage.move
move/tests/: canary_tests.move  member_registry_tests.move
