[package]
name = "canary-worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "canary_sdk"
path = "src/lib.rs"

[dependencies]
# Sui SDK - using git dependency as crates.io may not have latest version
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
bcs = "0.1.4"

# HTTP client
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding/decoding
base64 = "0.22.1"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Seal SDK
seal-sdk-rs = { git = "https://github.com/gfusee/seal-sdk-rs", tag = "0.0.2" }

[dev-dependencies]
rand = "0.9.2"